--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -1,17 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.GridPane?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.control.Button?>
-
-<GridPane  fx:id="grid" prefHeight="510.0" prefWidth="510.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FXMLMainController">
-
-    <Button fx:id="openYTAnalitics" text="Перейти в YouTube Analytics" GridPane.valignment="CENTER"/>
-    <Button fx:id="openSettings" text="Перейти в Настройки" GridPane.columnIndex="1"/>
-
-    <columnConstraints>
-        <ColumnConstraints percentWidth="50"/>
-        <ColumnConstraints percentWidth="50"/>
-    </columnConstraints>
-</GridPane>
+<BorderPane maxHeight="400.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="400.0" prefWidth="600.0" stylesheets="@jfoenixCSS.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FXMLMainController">
+   <center>
+      <AnchorPane prefHeight="320.0" prefWidth="472.0" stylesheets="@jfoenixCSS.css" BorderPane.alignment="CENTER">
+         <children>
+            <JFXButton layoutX="165.0" layoutY="136.0" prefHeight="53.0" prefWidth="271.0" text="YouTube Analytics" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </JFXButton>
+            <JFXButton layoutX="166.0" layoutY="214.0" prefHeight="20.0" prefWidth="270.0" text="Settings" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <graphic>
+                  <ImageView fitHeight="31.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@settings.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <Label layoutX="443.0" layoutY="333.0" prefHeight="25.0" prefWidth="143.0" text="YouTube Analytics v.1.01" />
+         </children>
+      </AnchorPane>
+   </center>
+   <top>
+      <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="25.0" prefWidth="570.0" style="-fx-padding: 2;" stylesheets="@jfoenixCSS.css" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fx:id="close" fitHeight="29.0" fitWidth="32.0" onMouseClicked="#close" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@close.png" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
+            <ImageView fitHeight="31.0" fitWidth="44.0" onMouseClicked="#minimize" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@minus.png" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
+         </children>
+      </HBox>
+   </top>
+</BorderPane>
