--- a/src/main/resources/FXMLYTChannelFind.fxml
+++ b/src/main/resources/FXMLYTChannelFind.fxml
@@ -6,15 +6,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
-<?import javafx.scene.control.ListView?>
-<AnchorPane fx:id="anchor" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FXMLYTChannelFindController">
+<AnchorPane fx:id="anchor" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FXMLYTChannelFindController">
    <children>
-      <ListView fx:id="channelList" layoutX="400.0" prefHeight="400.0" prefWidth="200.0" />
+      <JFXListView fx:id="channelList" layoutX="400.0" prefHeight="400.0" prefWidth="300.0" />
       <JFXTextField fx:id="nickNameField" layoutX="5.0" layoutY="31.0" prefHeight="27.0" prefWidth="393.0" />
-      <JFXButton fx:id="findBtn" defaultButton="true" layoutX="336.0" layoutY="71.0" onAction="#findBtnClick" text="Find" />
+      <JFXButton fx:id="findBtn" defaultButton="true" layoutX="336.0" layoutY="70.0" onAction="#findBtnClick" text="Find" />
       <Text fx:id="text" layoutX="14.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input nickname to find YouTube Channel" textAlignment="CENTER" wrappingWidth="375.33935546875" />
-      <JFXButton fx:id="chooseBtn" layoutX="466.0" layoutY="347.0" onAction="#chooseBtnClick" prefHeight="27.0" prefWidth="69.0" text="Choose" />
-      <JFXButton fx:id="cancelBtn" layoutX="276.0" layoutY="71.0" onAction="#cancelBtnClick" text="Cancel" />
+      <JFXButton fx:id="chooseBtn" layoutX="516.0" layoutY="373.0" onAction="#chooseBtnClick" prefHeight="27.0" prefWidth="69.0" text="Choose"/>
+      <JFXButton fx:id="cancelBtn" layoutX="276.0" layoutY="70.0" onAction="#cancelBtnClick" text="Cancel" />
    </children>
 </AnchorPane>
